[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nftest"
dynamic = ["version"]
description = "CLI testing tool for Nextflow"
readme = "README.md"
authors = [
    { name = "Chenghao Zhu", email = "ChenghaoZhu@mednet.ucla.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML",
    "python-dotenv",
    "pytest",
    "mock"
]

[project.optional-dependencies]
dev = ["pytest", "mock"]

[project.scripts]
nftest = "nftest.__main__:main"

[tool.hatch.metadata]
package-data = { "nftest" = ["data/*"] }

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
git_describe_command = "git describe --dirty --tags --long --match 'v[0-9]*.[0-9]*.[0-9]*'"

[tool.hatch.build.hooks.vcs]
version-file = "nftest/_version.py"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py3.8
    py3.12

[testenv]
deps = pytest
commands = pytest test --doctest-modules --junitxml=junit/test-results.xml
"""
