[metadata]
# replace with your username:
name = module_name
version = attr: blutils.__version__
author = 'Some One, Someone Else'
author_email = 'someone@example.com, someoneelse@example.com'
description = 'Description of this CLI toole'
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

install_requires =

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    tool_name = module_name.__main__:main