[metadata]
# replace with your username:
name = nftest
version = attr: nftest.__version__
author = 'Chenghao Zhu'
author_email = 'ChenghaoZhu@mednet.ucla.edu'
description = 'CLI testing tool for Nextflow'
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

install_requires =
    PyYAML

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    nftest = nftest.__main__:main